fix projects abd about me content alignment

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -41,16 +41,17 @@
     &__content {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         padding: 0 1rem;
         background-color: white;
+        // border-top: 6px solid pink;
         // height: calc(100vh - 69.59px);
         height: 100%;
         @include contain;
 
         @include tablet {
             padding: 0 4rem;
-            height: calc(100vh - 82.09px);
+            // height: calc(100vh - 82.09px);
         }
 
         @include desktop {
