--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -17,6 +17,13 @@
         }
     }
 
+    &__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        height: 100%;
+    }
 
     &__title {
         text-transform: uppercase;
